--- a/casting_html/src/css/intro/Blue.css
+++ b/casting_html/src/css/intro/Blue.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 :root {
-  --width: 750px;
+  --width: 625px;
   --height: 130px;
   --border-size: 2px;
   --border-color: #2d6199;
@@ -32,47 +32,9 @@ div.box {
 
 div.race {
   position: absolute;
-  width: 125px;
-  height: 100%;
-  background-size: contain;
-  background-position: center center;
-  background-repeat: no-repeat;
-  border: inset 15px transparent;
-  box-sizing: border-box;
+  visibility: hidden;
 }
 
-#random {
-  background-image: url("../../img/races/random-black.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain;
-  filter: invert(1) drop-shadow(2px 2px 2px black);
-}
-
-#protoss {
-  background-image: url("../../img/races/protoss-black.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain;
-  border: inset 5px transparent;
-  filter: invert(1) drop-shadow(2px 2px 2px black);
-}
-
-#zerg {
-  background-image: url("../../img/races/zerg-black.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain;
-  filter: invert(1) drop-shadow(2px 2px 2px black);
-}
-
-#terran {
-  background-image: url("../../img/races/terran-black.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain;
-  filter: invert(1) drop-shadow(1px 1px 1px black);
-}
 
 div.logo {
   position: absolute;
@@ -81,7 +43,7 @@ div.logo {
   background-repeat: no-repeat;
   height: 100%;
   width: 130px;
-  right: 0px;
+  left: 0px;
   overflow: hidden;
   filter: drop-shadow(2px 2px 2px black);
   background-size: contain;
@@ -95,8 +57,8 @@ div.label {
   position: absolute;
   top: calc(40% - 5px);
   height: 60px;
-  left: 125px;
-  width: calc(100% - 125px - 130px);
+  left: 130px;
+  width: calc(100% - 130px);
   background: rgba(12, 30, 51, 0.7);
   border-bottom: 2px solid var(--border-color);
   border-top: 2px solid var(--border-color);
@@ -106,7 +68,7 @@ div.label {
 div.label2{
   position: absolute;
   height: 100%;
-  width: 125px;
+  width: 130px;
   background: rgba(36,69,108, 0.8);
   border-right: 2px solid var(--border-color);
   box-sizing: border-box;
@@ -114,19 +76,14 @@ div.label2{
 
 div.label3{
   position: absolute;
-  height: 100%;
-  width: 130px;
-  right: 0px;
-  background-color: rgba(36,69,108, 0.8);
-  border-left: 2px solid var(--border-color);
-  box-sizing: border-box;
+  visibility: hidden;
 }
 
 div.name {
   position: absolute;
   top: calc(40% - 8px);
-  left: 140px;
-  width: calc(100% - 140px - 150px);
+  left: 145px;
+  width: calc(100% - 150px);
   height: 62px;
   /*line-height: 55px;
     */
@@ -140,9 +97,9 @@ div.name.name{
 div.team {
   position: absolute;
   top: 5px;
-  left: 140px;
+  left: 145px;
   height: calc(30%);
-  width: calc(100% - 140px - 180px);
+  width: calc(100% - 180px);
   text-align: center;
   font-size: 30px !important;
 }
