--- a/casting_html/src/css/intro/Default.css
+++ b/casting_html/src/css/intro/Default.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-  --width: 800px;
+  --width: 600px;
   --height: 120px;
   --border-size: 2px;
   --border-color: black;
@@ -37,54 +37,7 @@ div.box {
 
 div.race {
   position: absolute;
-}
-
-#random {
-  left: -50px;
-  top: -25px;
-  width: 175px;
-  height: 190px;
-  background-image: url("../../img/races/Random.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  filter: drop-shadow(0px 0px 5px black);
-}
-
-#protoss {
-  left: -100px;
-  top: -100px;
-  width: 300px;
-  height: 300px;
-  background-image: url("../../img/races/Protoss.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain;
-  filter: drop-shadow(0px 0px 5px black);
-}
-
-#terran {
-  left: -58px;
-  top: -45px;
-  width: 185px;
-  height: 185px;
-  background-image: url("../../img/races/Terran.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  filter: drop-shadow(0px 0px 5px black);
-}
-
-#zerg {
-  left: -50px;
-  top: -45px;
-  width: 175px;
-  height: 200px;
-  background-image: url("../../img/races/Zerg.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  filter: drop-shadow(0px 0px 5px black);
+  visibility: hidden;
 }
 
 div.logo {
@@ -92,10 +45,10 @@ div.logo {
   background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
-  right: calc(14px - var(--border-size));
-  top: calc(6px - var(--border-size));
-  height: 120px;
-  width: 120px;
+  left: -25px;
+  bottom: 0px;
+  height: 180px;
+  width: 180px;
   overflow: hidden;
   filter: drop-shadow(2px 2px 2px black);
 }
@@ -112,7 +65,7 @@ div.name {
   position: absolute;
   top: calc(40% - 10px);
   left: 15%;
-  width: calc(85% - 120px);
+  width: 80%;
   height: 62px;
   /*line-height: 55px;*/
   text-align: center;
